Updated to use Craft license. Added changelog. Version bump to beta.2.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "topshelfcraft/walk",
     "type": "craft-plugin",
     "description": "A Craft-aware array_walk() method, plus some super-convenient console commands, to easily call Craft service methods on a collection of elements or values.",
-    "version": "3.0.0-beta.1",
+    "version": "3.0.0-beta.2",
     "keywords": [
         "craft",
         "cms",
@@ -10,7 +10,12 @@
         "plugin",
         "walk",
         "array_walk",
-        "console"
+        "console",
+        "development",
+        "utilities",
+        "import",
+        "migration",
+        "list processing"
     ],
     "license": "MIT",
     "homepage": "https://topshelfcraft.com",
@@ -22,7 +27,7 @@
     ],
     "support": {
         "email": "support@topshelfcraft.com",
-        "issues": "https://github.com/TopShelfCraft/Walk/issues?state=open",
+        "issues": "https://github.com/TopShelfCraft/Walk/issues",
         "source": "https://github.com/TopShelfCraft/Walk",
         "docs": "https://github.com/TopShelfCraft/Walk"
     },
