--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "topshelfcraft/walk",
     "type": "craft-plugin",
     "description": "A Craft-aware array_walk() method, plus some super-convenient console commands, to easily call Craft service methods on a collection of elements or values.",
-    "version": "3.0.0-beta.2",
+    "version": "3.0.0-beta.3",
     "keywords": [
         "craft",
         "cms",
@@ -32,7 +32,7 @@
         "docs": "https://github.com/TopShelfCraft/Walk"
     },
     "require": {
-        "craftcms/cms": "^3.0.0-beta.1"
+        "craftcms/cms": "^3.0"
     },
     "autoload": {
         "psr-4": {
