--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "topshelfcraft/walk",
     "type": "craft-plugin",
     "description": "A Craft-aware array_walk() method, plus some super-convenient console commands, to easily call Craft service methods on a collection of elements or values.",
-    "version": "3.0.0-beta.3",
+    "version": "3.0.0-rc.1",
     "keywords": [
         "craft",
         "cms",
