Ready for Craft 4!  🚀

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "topshelfcraft/walk",
     "type": "craft-plugin",
-    "description": "A Craft-aware array_walk() method, plus some super-convenient console commands, to easily call Craft service methods on a collection of elements or values.",
-    "version": "3.0.0",
+    "description": "A Craft-aware array-walk tool, with convenient console commands, to easily call Craft service methods on a collection of elements or values.",
+    "version": "4.0.0",
     "keywords": [
         "craft",
         "cms",
@@ -17,43 +17,28 @@
         "migration",
         "list processing"
     ],
-    "license": "MIT",
-    "homepage": "https://topshelfcraft.com",
+    "support": {
+        "docs": "https://github.com/TopShelfCraft/Walk"
+    },
+    "license": "proprietary",
     "authors": [
         {
-            "name": "Top Shelf Craft",
+            "name": "Top Shelf Craft (Michael Rog)",
             "homepage": "https://topshelfcraft.com"
         }
     ],
-    "support": {
-        "email": "support@topshelfcraft.com",
-        "issues": "https://github.com/TopShelfCraft/Walk/issues",
-        "source": "https://github.com/TopShelfCraft/Walk",
-        "docs": "https://github.com/TopShelfCraft/Walk"
-    },
     "require": {
-        "craftcms/cms": "^3.0"
+        "craftcms/cms": "^4.0",
+        "topshelfcraft/base": "^4.0.1"
     },
     "autoload": {
         "psr-4": {
-          "topshelfcraft\\walk\\": "src/"
+            "TopShelfCraft\\Walk\\": "src/"
         }
     },
     "extra": {
         "name": "Walk",
         "handle": "walk",
-        "description": "It walks, like the walking man.",
-        "version": "3.0.0",
-        "schemaVersion": "3.0.0.0",
-        "hasSettings": false,
-        "hasCpSection": false,
-        "developer": "Top Shelf Craft (Michael Rog)",
-        "developerUrl": "https://topshelfcraft.com",
-        "documentationUrl": "",
-        "changelogUrl": "",
-        "components": {
-            "dummy": "topshelfcraft\\walk\\services\\DummyService"
-        },
-        "class": "topshelfcraft\\walk\\Walk"
+        "class": "TopShelfCraft\\Walk\\Walk"
     }
 }
